Image component and tests

--- a/dev/index.html
+++ b/dev/index.html
@@ -14,11 +14,7 @@
     <!--[if lt IE 8]>
         <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
     <![endif]-->
-    <div id="app">Loading...</div>
-    <!-- the following scripts are listed as peerDependencies in package.json -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/react/15.5.4/react.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/react/15.5.4/react-dom.min.js"></script>
-    <script src="https://unpkg.com/prop-types/prop-types.js"></script>
+    <div id="app">Loading Dev App...</div>
     <!-- this is our local dev app -->
     <script src="script/index.umd.js"></script>
   </body>
