updates to rollup config css for dev and build tasks
modular css added.  css sourcemaps work.

--- a/dev/index.html
+++ b/dev/index.html
@@ -9,6 +9,7 @@
     <title>react-carousel local dev</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel = "stylesheet" type = "text/css" href = "style.css" />
   </head>
   <body>
     <!--[if lt IE 8]>
