Added ability to pinch-zoom on carousel images.

--- a/dev/index.html
+++ b/dev/index.html
@@ -8,7 +8,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <title>react-carousel local dev</title>
     <meta name="description" content="">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <link rel = "stylesheet" type = "text/css" href = "style.css" />
   </head>
   <body>
