--- a/dev/index.html
+++ b/dev/index.html
@@ -6,7 +6,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    <title>react-carousel local dev</title>
+    <title>Pure React Carousel - By Express Labs</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <link rel = "stylesheet" type = "text/css" href = "style.css" />
