making a gh-page (#108)
Something we can share with folks.  Looks nicer.

--- a/dev/index.html
+++ b/dev/index.html
@@ -9,6 +9,7 @@
     <title>Pure React Carousel - By Express Labs</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+    <link href="https://fonts.googleapis.com/css?family=Montserrat|Raleway" rel="stylesheet">
     <link rel = "stylesheet" type = "text/css" href = "style.css" />
   </head>
   <body>
